--- a/nextflow.config
+++ b/nextflow.config
@@ -189,7 +189,7 @@ dag {
 manifest {
     name            = 'zbi/spliceview'
     author          = """Trang Do"""
-    homePage        = 'https://github.com/zbi/spliceview'
+    homePage        = 'https://github.com/dhtt/spliceview'
     description     = """Pipeline for extracting alignment information from a genomic regions for inspection of splicing events"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=22.10.1'
