Add new modules (CUTADAPT, STAR_GENOMEGENERATE, STAR_ALIGN, SAMTOOLS_INDEX)

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -30,6 +30,21 @@ process {
         ext.args = '--quiet'
     }
 
+    withName: STAR_GENOMEGENERATE {
+        publishDir = [
+            path: { "${params.outdir}/genome/index" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_reference
+        ]
+    }
+
+    withName: STAR_ALIGN {
+        ext.args = [
+            params.extra_star_align_args ? params.extra_star_align_args.split("\\s(?=--)") : ''
+        ]
+    }
+
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
