--- a/nextflow.config
+++ b/nextflow.config
@@ -18,12 +18,21 @@ params {
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
+    save_reference             = true
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
     multiqc_logo               = null
     max_multiqc_email_size     = '25.MB'
     multiqc_methods_description = null
+
+    // Alignment
+    star_ignore_sjdbgtf        = false
+    seq_platform               = null
+    seq_center                 = null
+    seq_center                 = null
+    extra_star_align_args      = '--outSAMtype BAM SortedByCoordinate'
 
     // Boilerplate options
     outdir                     = null
