--- a/conf/test.config
+++ b/conf/test.config
@@ -15,14 +15,15 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 2
-    max_memory = '6.GB'
-    max_time   = '6.h'
+    max_cpus   = 20
+    max_memory = '128.GB'
+    max_time   = '240.h'
 
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = '/home/dhthutrang/TEST/mRNA_seq/raw_files'
+    input  = '/home/dhthutrang/TEST/mRNA_seq/raw_files/testdata/samplesheet.csv'
+    outdir = '/home/dhthutrang/zbi-spliceview_test'
 
     // Genome references
     genome = 'R64-1-1'
