Add parameteres to schema

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -42,6 +42,13 @@ process {
     withName: STAR_ALIGN {
         ext.args = [
             params.extra_star_align_args ? params.extra_star_align_args.split("\\s(?=--)") : ''
+        ].flatten().unique(false).join(' ').trim()
+        publishDir = [
+            [
+                path: { "${params.outdir}/star/log" },
+                mode: params.publish_dir_mode,
+                pattern: '*.{out,tab}'
+            ]
         ]
     }
 
