--- a/nextflow.config
+++ b/nextflow.config
@@ -31,8 +31,7 @@ params {
     star_ignore_sjdbgtf        = false
     seq_platform               = null
     seq_center                 = null
-    seq_center                 = null
-    extra_star_align_args      = '--outSAMtype BAM SortedByCoordinate'
+    extra_star_align_args      = '--outSAMtype BAM SortedByCoordinate --runThreadN 16'
 
     // Boilerplate options
     outdir                     = null
