--- a/conf/test.config
+++ b/conf/test.config
@@ -22,12 +22,12 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    // input  = '/home/dhthutrang/TEST/mRNA_seq/raw_files/testdata/samplesheet.csv'
-    outdir = '/home/dhthutrang/zbi-spliceview_test'
+    input  = 'mRNA_seq/raw_files/testdata/samplesheet.csv'
+    outdir = 'zbi-spliceview_test'
+    genome = 'mm10'
 
     // Genome references
-    // genome = 'R64-1-1'
-    input              = "${params.test_data_base}/samplesheet/v3.10/samplesheet_test.csv"
-    fasta              = "${params.test_data_base}/reference/genome.fasta"
-    gtf                = "${params.test_data_base}/reference/genes.gtf.gz"
+    // input              = "${params.test_data_base}/samplesheet/v3.10/samplesheet_test.csv"
+    // fasta              = "${params.test_data_base}/reference/genome.fasta"
+    // gtf                = "${params.test_data_base}/reference/genes.gtf.gz"
 }
