Skip genome indexing if star_index param defined

--- a/conf/test.config
+++ b/conf/test.config
@@ -20,11 +20,11 @@ params {
     max_time   = '240.h'
 
     // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = 'mRNA_seq/raw_files/testdata/samplesheet.csv'
-    outdir = 'zbi-spliceview_test'
-    genome = 'mm10'
+    // Run pipeline from TEST folder
+    input      = 'mRNA_seq/raw_files/testdata/samplesheet.csv'
+    outdir     = 'zbi-spliceview_test'
+    genome     = 'mm10'
+    star_index = 'zbi-spliceview_test_1/genome/index/star'
 
     // Genome references
     // input              = "${params.test_data_base}/samplesheet/v3.10/samplesheet_test.csv"
