--- a/nextflow.config
+++ b/nextflow.config
@@ -28,10 +28,11 @@ params {
     multiqc_methods_description = null
 
     // Alignment
+    star_index                 = null
     star_ignore_sjdbgtf        = false
     seq_platform               = null
     seq_center                 = null
-    extra_star_align_args      = '--outSAMtype BAM SortedByCoordinate --runThreadN 16'
+    extra_star_align_args      = '--outSAMtype BAM SortedByCoordinate --readFilesCommand gunzip -c'
 
     // Boilerplate options
     outdir                     = null
