--- a/conf/modules.config
+++ b/conf/modules.config
@@ -48,7 +48,19 @@ process {
                 path: { "${params.outdir}/star/log" },
                 mode: params.publish_dir_mode,
                 pattern: '*.{out,tab}'
+            ],
+            [
+                path: { "${params.outdir}/result" },
+                mode: params.publish_dir_mode,
+                pattern: '*.bam'
             ]
+        ]
+    }
+    withName: SAMTOOLS_INDEX {
+        publishDir = [
+            path: { "${params.outdir}/result" },
+            mode: params.publish_dir_mode,
+            pattern: '*.bai'
         ]
     }
 
