Add FASTQ_DIR_TO_SAMPLESHEET subworkflow

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,6 +18,13 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
+    withName: FASTQ_DIR_TO_SAMPLESHEET {
+        publishDir = [
+            path: { "${params.input_alt}" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
     withName: SAMPLESHEET_CHECK {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
