--- a/conf/test.config
+++ b/conf/test.config
@@ -25,6 +25,10 @@ params {
     outdir     = 'zbi-spliceview_test'
     genome     = 'mm10'
     star_index = 'zbi-spliceview_test_1/genome/index/star'
+    //python /home/dhthutrang/Krebs/episplice-pipeline/utils/fastq_dir_to_samplesheet.py /home/dhthutrang//TEST/mRNA_seq/raw_files/testdata2 samplesheet_.csv rnaseq -r1 _1.fastq.gz -r2 _2.fastq.gz
+    input_alt  = 'mRNA_seq/raw_files/testdata2'
+    read1_extension = '_1.fastq.gz'
+    read2_extension = '_2.fastq.gz'
 
     // Genome references
     // input              = "${params.test_data_base}/samplesheet/v3.10/samplesheet_test.csv"
