--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,9 @@ params {
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
-    sra_number                 = null
+    input_alt                  = null
+    read1_extension            = '_1.fastq.gz'
+    read2_extension            = '_2.fastq.gz'
 
 
     // References
