Add external args for fastq_dir_to_samplesheet

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -19,6 +19,10 @@ process {
     ]
 
     withName: FASTQ_DIR_TO_SAMPLESHEET {
+        ext.args = [ 
+            params.fastq_dir_to_samplesheet_args ? params.fastq_dir_to_samplesheet_args.split("\\s(?=--)") : ''
+        ].flatten().unique(false).join(' ').trim()
+        ext.prefix = { "${params.input_alt}" }
         publishDir = [
             path: { "${params.input_alt}" },
             mode: params.publish_dir_mode
