--- a/nextflow.config
+++ b/nextflow.config
@@ -15,7 +15,7 @@ params {
     input_alt                  = null
     read1_extension            = '_1.fastq.gz'
     read2_extension            = '_2.fastq.gz'
-
+    fastq_dir_to_samplesheet_args = null
 
     // References
     genome                     = null
