Replace samplesheet by fastq-path as input

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -22,9 +22,9 @@ process {
         ext.args = [ 
             params.fastq_dir_to_samplesheet_args ? params.fastq_dir_to_samplesheet_args.split("\\s(?=--)") : ''
         ].flatten().unique(false).join(' ').trim()
-        ext.prefix = { "${params.input_alt}" }
+        ext.prefix = { "${params.input}" }
         publishDir = [
-            path: { "${params.input_alt}" },
+            path: { "${params.input}" },
             mode: params.publish_dir_mode
         ]
     }
