--- a/conf/test.config
+++ b/conf/test.config
@@ -21,12 +21,11 @@ params {
 
     // Input data
     // Run pipeline from TEST folder
-    input      = 'mRNA_seq/raw_files/testdata/samplesheet.csv'
+    input      = '/home/dhthutrang/TEST/mRNA_seq/raw_files/testdata2'
     outdir     = 'zbi-spliceview_test'
     genome     = 'mm10'
     star_index = 'zbi-spliceview_test_1/genome/index/star'
     
-    input_alt  = '/home/dhthutrang/TEST/mRNA_seq/raw_files/testdata2'
     read1_extension = '_1.fastq.gz'
     read2_extension = '_2.fastq.gz'
 
