Add warnings for iGenome over self-defined genome Change path for generated genome from STAR_GENOMEGENERATE

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -43,7 +43,7 @@ process {
 
     withName: STAR_GENOMEGENERATE {
         publishDir = [
-            path: { "${params.outdir}/genome/index" },
+            path: { "${params.outdir}/genomes/${params.genome}" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_reference
@@ -56,12 +56,12 @@ process {
         ].flatten().unique(false).join(' ').trim()
         publishDir = [
             [
-                path: { "${params.outdir}/star/log" },
+                path: { "${params.outdir}/star_align_log" },
                 mode: params.publish_dir_mode,
                 pattern: '*.{out,tab}'
             ],
             [
-                path: { "${params.outdir}/result" },
+                path: { "${params.outdir}/star_align_result" },
                 mode: params.publish_dir_mode,
                 pattern: '*.bam'
             ]
@@ -69,7 +69,7 @@ process {
     }
     withName: SAMTOOLS_INDEX {
         publishDir = [
-            path: { "${params.outdir}/result" },
+            path: { "${params.outdir}/star_align_result" },
             mode: params.publish_dir_mode,
             pattern: '*.bai'
         ]
