--- a/conf/test.config
+++ b/conf/test.config
@@ -22,9 +22,9 @@ params {
     // Input data
     // Run pipeline from TEST folder
     input      = '/home/dhthutrang/TEST/mRNA_seq/raw_files/testdata2'
-    outdir     = 'zbi-spliceview_test'
+    outdir     = '/home/dhthutrang/TEST/spliceview_test'
     genome     = 'mm10'
-    star_index = 'zbi-spliceview_test_1/genome/index/star'
+    star_index = '/home/dhthutrang/TEST/genomes/mm10'
     
     read1_extension = '_1.fastq.gz'
     read2_extension = '_2.fastq.gz'
