--- a/conf/test.config
+++ b/conf/test.config
@@ -21,13 +21,12 @@ params {
 
     // Input data
     // Run pipeline from TEST folder
-    input      = '/home/dhthutrang/TEST/mRNA_seq/raw_files/testdata2'
-    outdir     = '/home/dhthutrang/TEST/spliceview_test'
-    genome     = 'mm10'
-    star_index = '/home/dhthutrang/TEST/genomes/mm10'
-    
-    read1_extension = '_1.fastq.gz'
-    read2_extension = '_2.fastq.gz'
+    genome           = 'R64-1-1'
+    read1_extension  = '_1.fastq.gz'
+    read2_extension  = '_2.fastq.gz'
+
+    // Important: ${projectDir} must be referenced using double quotes
+    input            = "${projectDir}/assets/testdata"
 
     // Genome references
     // input              = "${params.test_data_base}/samplesheet/v3.10/samplesheet_test.csv"
