Add test with minimum cpu/memory & Update README.md

--- a/conf/test_minimum.config
+++ b/conf/test_minimum.config
@@ -12,11 +12,11 @@
 
 params {
     config_profile_name        = 'Test profile'
-    config_profile_description = 'Minimal test dataset to check pipeline function'
+    config_profile_description = 'Minimal test dataset to check pipeline function using lowest resource settings'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 20
-    max_memory = '128.GB'
+    max_cpus   = 2
+    max_memory = '8.GB'
     max_time   = '240.h'
 
     // Input data
