--- a/nextflow.config
+++ b/nextflow.config
@@ -153,8 +153,9 @@ profiles {
         executor.cpus          = 16
         executor.memory        = 60.GB
     }
-    test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
+    test         { includeConfig 'conf/test.config'      }
+    test_full    { includeConfig 'conf/test_full.config' }
+    test_minimum { includeConfig 'conf/test_minimum.config' }
 }
 
 
