Change default config

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,7 +34,7 @@ params {
     star_ignore_sjdbgtf        = false
     seq_platform               = null
     seq_center                 = null
-    extra_star_align_args      = '--outSAMtype BAM SortedByCoordinate --readFilesCommand gunzip -c'
+    extra_star_align_args      = '--outSAMtype BAM SortedByCoordinate --readFilesCommand gunzip -c --limitBAMsortRAM 1705050353'
 
     // Boilerplate options
     outdir                     = null
@@ -64,7 +64,7 @@ params {
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
+    max_memory                 = '48.GB'
     max_cpus                   = 16
     max_time                   = '240.h'
 
